--- a/css/style.css
+++ b/css/style.css
@@ -1,414 +1,419 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 12px;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
 }
 .lightning {
-    display: none;
-    position: absolute;
-    /*   right: -50%; */
-    background: transparent;
-    animation: lightning 4s linear infinite;
+  display: none;
+  position: absolute;
+  /*   right: -50%; */
+  background: transparent;
+  animation: lightning 4s linear infinite;
 }
 .lightning img {
-    width: 100vw;
-    transform: scaleX(-1) rotate(45deg);
+  height: 100vh;
+  /*transform: scaleX(-1) rotate(45deg); */
 }
 .tools {
-
 }
 .tools .drive {
-    display: block;
-    width: 30px;
-    background: rgba(70, 163, 74, 0.4);
-    border-radius: 50%;
+  display: block;
+  width: 30px;
+  background: rgba(70, 163, 74, 0.4);
+  border-radius: 50%;
 }
 .tools .drive:hover {
-    background-color: white;
+  background-color: white;
 }
 .tools .drive img {
-    width: 100%;
+  width: 100%;
 }
 .fog {
-    position: fixed;
-    border-radius: 50%;
-    filter: blur(55px);
-    opacity: 0.4;
-    background-color: white;
-    display: none;
-    animation: fogMoving 8s linear infinite;
+  position: fixed;
+  border-radius: 50%;
+  filter: blur(55px);
+  opacity: 0.4;
+  background-color: white;
+  display: none;
+  animation: fogMoving 8s linear infinite;
 }
 .fog {
-    width: 95vw;
-    height: 10vw;
-    bottom: 12vw;
-    left: 5vw;
+  width: 95vw;
+  height: 10vw;
+  bottom: 12vw;
+  left: 5vw;
 }
 .date {
-    float: left;
-    color: #fff;
-    font-size: 3em;
-    margin-left: 80px;
-    margin-top: 80px;
-    display: inline-block;
+  float: left;
+  color: #fff;
+  font-size: 3em;
+  margin-left: 80px;
+  margin-top: 80px;
+  display: inline-block;
 }
 .time {
-    float: left;
-    color: #fff;
-    font-size: 3em;
-    margin-top: 80px;
-    margin-left: 50px;
-    display: inline-block;
+  float: left;
+  color: #fff;
+  font-size: 3em;
+  margin-top: 80px;
+  margin-left: 20px;
+  display: inline-block;
 }
 .container {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 .sun {
-    width: 10vw;
-    height: calc(10vw);
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-    border-radius: 50%;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: rotate(-120deg) translate(40vw) rotate(-120deg);
+  width: 10vw;
+  height: calc(10vw);
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  border-radius: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: rotate(-120deg) translate(40vw) rotate(-120deg);
 }
 .city-line-art {
-    width: 110vw;
-    position: absolute;
-    bottom: -5vh;
-    opacity: 1;
-    left: -5vw;
+  width: 110vw;
+  position: absolute;
+  bottom: -5vh;
+  opacity: 1;
+  left: -5vw;
 }
 .google {
-    width: 10%;
-    float: right;
-    margin-top: 1%;
-    margin-right: 15px;
+  width: 10%;
+  float: right;
+  margin-top: 1%;
+  margin-right: 15px;
+  color: white !important;
 }
 .google a {
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 10px;
-    border-radius: 2px;
-    color: #333;
+  text-decoration: none;
+  font-size: 1.75em;
+  padding: 10px;
+  border-radius: 2px;
+  color: white !important;
 }
 .google svg {
-    padding: 0.3em;
-    font-size: 4em;
+  padding: 0.3em;
+  font-size: 4em;
 }
 .gb_g:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .gb_Tc {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    height: 48px;
-    line-height: normal;
-    padding: 0 4px;
-    padding-left: 30px;
-    -webkit-flex: 0 0 auto;
-    flex: 0 0 auto;
-    -webkit-box-pack: flex-end;
-    -webkit-justify-content: flex-end;
-    justify-content: flex-end;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 48px;
+  line-height: normal;
+  padding: 0 4px;
+  padding-left: 30px;
+  -webkit-flex: 0 0 auto;
+  flex: 0 0 auto;
+  -webkit-box-pack: flex-end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
 }
 .gb_Sc {
-    height: 48px;
-    float: left;
-    vertical-align: middle;
-    white-space: nowrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-user-select: none;
+  height: 48px;
+  float: left;
+  vertical-align: middle;
+  white-space: nowrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-user-select: none;
 }
 .weather {
-    position: fixed;
-    top: 15%;
-    right: 10%;
-    width: 25vh;
-    padding: 20px;
-    border-radius: 10px;
-    border: 2px #fff solid;
-    color: #fff;
+  position: fixed;
+  top: 15%;
+  right: 10%;
+  width: auto;
+  max-width: 25vh;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px #fff solid;
+  color: #fff;
 }
 .weather .icon img {
-    width: 100%;
+  width: 100%;
 }
 .weather .city {
-    font-size: 2.5em;
-    padding-bottom: -20%;    
+  font-size: 2.5em;
+  padding-bottom: -20%;
 }
 .weather .temp {
-    margin-top: -20%;
+  margin-top: -20%;
 }
 .weather .curr-temp {
-    font-size: 3em;
+  font-size: 3em;
 }
 .weather .description {
-    font-size: 2em;
-    line-height: 2em;
-    text-transform: capitalize;
+  font-size: 2em;
+  line-height: 2em;
+  text-transform: capitalize;
 }
 .weather .max-min {
-    clear: both;
-    font-size: 1.5em;
-    line-height: 1.4em;
+  clear: both;
+  font-size: 1.5em;
+  line-height: 1.4em;
 }
 .rain-drop {
-    display: none;
-    position: fixed;
-    top: -100px;
-    width: 1px;
-    height: 100px;
-    background-image: linear-gradient(to bottom, transparent, white);
+  display: none;
+  position: fixed;
+  top: -100px;
+  width: 1px;
+  height: 100px;
+  background-image: linear-gradient(to bottom, transparent, white);
 }
 .layer-1 .rain-drop:nth-child(2) {
-    left: 10%;
-    animation: rainFall .8s linear 2s  infinite;
+  left: 10%;
+  animation: rainFall 0.8s linear 2s infinite;
 }
 .layer-1 .rain-drop:nth-child(3) {
-    left: 15%;
-    animation: rainFall .7s linear 1s  infinite;
+  left: 15%;
+  animation: rainFall 0.7s linear 1s infinite;
 }
 .layer-1 .rain-drop:nth-child(4) {
-    left: 35%;
-    animation: rainFall .7s linear .1s  infinite;
+  left: 35%;
+  animation: rainFall 0.7s linear 0.1s infinite;
 }
 .layer-1 .rain-drop:nth-child(5) {
-    left: 65%;
-    animation: rainFall .7s linear .3s  infinite;
+  left: 65%;
+  animation: rainFall 0.7s linear 0.3s infinite;
 }
 .layer-1 .rain-drop:nth-child(6) {
-    left: 20%;
-    animation: rainFall .8s linear .9s  infinite;
+  left: 20%;
+  animation: rainFall 0.8s linear 0.9s infinite;
 }
 .layer-1 .rain-drop:nth-child(7) {
-    left: 70%;
-    animation: rainFall .6s linear 1.1s  infinite;
+  left: 70%;
+  animation: rainFall 0.6s linear 1.1s infinite;
 }
 .layer-1 .rain-drop:nth-child(8) {
-    left: 82%;
-    animation: rainFall .7s linear .4s  infinite;
+  left: 82%;
+  animation: rainFall 0.7s linear 0.4s infinite;
 }
 .layer-1 .rain-drop:nth-child(9) {
-    left: 95%;
-    animation: rainFall .7s linear 1s  infinite;
+  left: 95%;
+  animation: rainFall 0.7s linear 1s infinite;
 }
 .layer-1 .rain-drop:nth-child(10) {
-    left: 53%;
-    animation: rainFall .8s linear 0.5s  infinite;
+  left: 53%;
+  animation: rainFall 0.8s linear 0.5s infinite;
 }
 .layer-1 .rain-drop:nth-child(11) {
-    left: 45%;
-    animation: rainFall .8s linear 0.5s  infinite;
+  left: 45%;
+  animation: rainFall 0.8s linear 0.5s infinite;
 }
 .layer-1 .rain-drop:nth-child(12) {
-    left: 5%;
-    animation: rainFall .8s linear 0.2s  infinite;
+  left: 5%;
+  animation: rainFall 0.8s linear 0.2s infinite;
 }
 .layer-1 .rain-drop:nth-child(13) {
-    left: 33%;
-    animation: rainFall .8s linear 0.65s  infinite;
+  left: 33%;
+  animation: rainFall 0.8s linear 0.65s infinite;
 }
 .layer-1 .rain-drop:nth-child(14) {
-    left: 66%;
-    animation: rainFall .7s linear 0.35s  infinite;
+  left: 66%;
+  animation: rainFall 0.7s linear 0.35s infinite;
 }
 .layer-1 .rain-drop:nth-child(15) {
-    left: 53%;
-    animation: rainFall .8s linear 0.2s  infinite;
+  left: 53%;
+  animation: rainFall 0.8s linear 0.2s infinite;
 }
 
 /* layer 2 */
 .layer-2 .rain-drop:nth-child(2) {
-    left: 22%;
-    animation: rainFall .4s linear .1s infinite;
+  left: 22%;
+  animation: rainFall 0.4s linear 0.1s infinite;
 }
 .layer-2 .rain-drop:nth-child(3) {
-    left: 15%;
-    animation: rainFall .5s linear 9s infinite;
+  left: 15%;
+  animation: rainFall 0.5s linear 9s infinite;
 }
 .layer-2 .rain-drop:nth-child(4) {
-    left: 37%;
-    animation: rainFall .5s linear 1.1s infinite;
+  left: 37%;
+  animation: rainFall 0.5s linear 1.1s infinite;
 }
 .layer-2 .rain-drop:nth-child(5) {
-    left: 3%;
-    animation: rainFall .4s linear .6s infinite;
+  left: 3%;
+  animation: rainFall 0.4s linear 0.6s infinite;
 }
 .layer-2 .rain-drop:nth-child(6) {
-    left: 28%;
-    animation: rainFall .3s linear 1.3s infinite;
+  left: 28%;
+  animation: rainFall 0.3s linear 1.3s infinite;
 }
 .layer-2 .rain-drop:nth-child(7) {
-    left: 97%;
-    animation: rainFall .5s linear .15s infinite;
+  left: 97%;
+  animation: rainFall 0.5s linear 0.15s infinite;
 }
 .layer-2 .rain-drop:nth-child(8) {
-    left: 84%;
-    animation: rainFall .5s linear .43s infinite;
+  left: 84%;
+  animation: rainFall 0.5s linear 0.43s infinite;
 }
 .layer-2 .rain-drop:nth-child(9) {
-    left: 8%;
-    animation: rainFall .4s linear .42s infinite;
+  left: 8%;
+  animation: rainFall 0.4s linear 0.42s infinite;
 }
 .layer-2 .rain-drop:nth-child(10) {
-    left: 57%;
-    animation: rainFall .3s linear .36s infinite;
+  left: 57%;
+  animation: rainFall 0.3s linear 0.36s infinite;
 }
 .layer-2 .rain-drop:nth-child(11) {
-    left: 42%;
-    animation: rainFall .4s linear .72s infinite;
+  left: 42%;
+  animation: rainFall 0.4s linear 0.72s infinite;
 }
 .layer-2 .rain-drop:nth-child(12) {
-    left: 75%;
-    animation: rainFall .4s linear .55s infinite;
+  left: 75%;
+  animation: rainFall 0.4s linear 0.55s infinite;
 }
 .layer-2 .rain-drop:nth-child(13) {
-    left: 39%;
-    animation: rainFall .5s linear .11s infinite;
+  left: 39%;
+  animation: rainFall 0.5s linear 0.11s infinite;
 }
 .layer-2 .rain-drop:nth-child(14) {
-    left: 47%;
-    animation: rainFall .4s linear 0.35s  infinite;
+  left: 47%;
+  animation: rainFall 0.4s linear 0.35s infinite;
 }
 .layer-2 .rain-drop:nth-child(15) {
-    left: 59%;
-    animation: rainFall .4s linear 0.2s  infinite;
+  left: 59%;
+  animation: rainFall 0.4s linear 0.2s infinite;
 }
 .snowflake {
-    display: none;
-    color: #fff;
-    font-size: 1.5em;
-    font-family: Arial, sans-serif;
-    position: fixed;
-    top: -10%;
-    z-index: 9999;
-    animation-name: snowflakes-fall, snowflakes-shake;
-    animation-duration: 10s, 3s;
-    animation-timing-function: linear, ease-in-out;
-    animation-iteration-count: infinite, infinite;
-    animation-play-state: running, running
+  display: none;
+  color: #fff;
+  font-size: 1.5em;
+  font-family: Arial, sans-serif;
+  position: fixed;
+  top: -10%;
+  z-index: 9999;
+  animation-name: snowflakes-fall, snowflakes-shake;
+  animation-duration: 10s, 3s;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+  animation-play-state: running, running;
 }
 .sakuras .snowflake {
-    color: pink;
-    font-weight: bold;
-    font-size: 2em;
+  color: pink;
+  font-weight: bold;
+  font-size: 2em;
 }
-.snowflakes, .sakuras {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+.snowflakes,
+.sakuras {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 .snowflake:nth-of-type(0) {
-    left: 1%;
-    animation-delay: 0s, 0s
+  left: 1%;
+  animation-delay: 0s, 0s;
 }
 .snowflake:nth-of-type(1) {
-    left: 10%;
-    animation-delay: 1s, 1s
+  left: 10%;
+  animation-delay: 1s, 1s;
 }
 .snowflake:nth-of-type(2) {
-    left: 20%;
-    animation-delay: 6s, .5s
+  left: 20%;
+  animation-delay: 6s, 0.5s;
 }
 .snowflake:nth-of-type(3) {
-    left: 30%;
-    animation-delay: 4s, 2s
+  left: 30%;
+  animation-delay: 4s, 2s;
 }
 .snowflake:nth-of-type(4) {
-    left: 40%;
-    animation-delay: 2s, 2s
+  left: 40%;
+  animation-delay: 2s, 2s;
 }
 .snowflake:nth-of-type(5) {
-    left: 50%;
-    animation-delay: 8s, 3s
+  left: 50%;
+  animation-delay: 8s, 3s;
 }
 .snowflake:nth-of-type(6) {
-    left: 60%;
-    animation-delay: 6s, 2s
+  left: 60%;
+  animation-delay: 6s, 2s;
 }
 .snowflake:nth-of-type(7) {
-    left: 70%;
-    animation-delay: 2.5s, 1s
+  left: 70%;
+  animation-delay: 2.5s, 1s;
 }
 .snowflake:nth-of-type(8) {
-    left: 80%;
-    animation-delay: 1s, 0s
+  left: 80%;
+  animation-delay: 1s, 0s;
 }
 .snowflake:nth-of-type(9) {
-    left: 90%;
-    animation-delay: 3s, 1.5s
+  left: 90%;
+  animation-delay: 3s, 1.5s;
 }
 .snowflake:nth-of-type(10) {
-    left: 25%;
-    animation-delay: 2s, 0s
+  left: 25%;
+  animation-delay: 2s, 0s;
 }
 .snowflake:nth-of-type(11) {
-    left: 65%;
-    animation-delay: 4s, 2.5s
+  left: 65%;
+  animation-delay: 4s, 2.5s;
 }
 @keyframes snowflakes-fall {
-    0% {
-        top: -10%
-    }
-    100% {
-        top: 100%
-    }
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
 }
 @keyframes snowflakes-shake {
-    0%, 100% {
-        transform: translateX(0)
-    }
-    50% {
-        transform: translateX(80px)
-    }
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(80px);
+  }
 }
 @keyframes lightning {
-    0%, 100% {
-        opacity: 0;
-        background-color: transparent;
-    }
-    30% {
-        opacity: 0;
-        background-color: transparent;
-    }
-    31% {
-        opacity: 1;
-        background-color: white;
-    }
-    37% {
-        opacity: 0;
-        background-color: transparent;
-    }
+  0%,
+  100% {
+    opacity: 0;
+    background-color: transparent;
+  }
+  30% {
+    opacity: 0;
+    background-color: transparent;
+  }
+  31% {
+    opacity: 1;
+    background-color: white;
+  }
+  37% {
+    opacity: 0;
+    background-color: transparent;
+  }
 }
 @keyframes rainFall {
-    0% {
-        top: -100px;
-    }
-    50% {
-        top: 100vh;
-    }
-    100% {
-        top: 100vh;
-    }
+  0% {
+    top: -100px;
+  }
+  50% {
+    top: 100vh;
+  }
+  100% {
+    top: 100vh;
+  }
 }
 @keyframes fogMoving {
-    0%, 100% {
-        transform: translateX(-10%);
-        opacity: 0.4;
-    }
-    50% {
-        transform: translateX(10%);
-        opacity: 0.3;
-    }
+  0%,
+  100% {
+    transform: translateX(-10%);
+    opacity: 0.4;
+  }
+  50% {
+    transform: translateX(10%);
+    opacity: 0.3;
+  }
 }
